log
Wed 20 Mar 2024 11:53:46 PM UTC: 
 exercises.c | 27 ++++++++++-----------------
 1 file changed, 10 insertions(+), 17 deletions(-)
 tests:  0|5
total_score: 0/70
ce036a0
Wed 20 Mar 2024 11:54:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
38d4f58
Thu 21 Mar 2024 12:01:54 AM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   int aux = first(L);
      |             ^~~~~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
84ce19b
Thu 21 Mar 2024 12:03:10 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   int aux = first(L);
      |             ^~~~~
exercises.c:65:9: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   65 |     aux = next(L);
      |         ^
cc1: all warnings being treated as errors
Compilation failed
0ebc86f
